--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,13 @@
 
         socket.emit('mensaje', { nombre: 'Sergio'});
 
-        socket.on('mensaje', function( payload ){
+        socket.on('nuevo-mensaje', function( payload ){
             console.log('Escuchando:', payload);
+        });
+
+        socket.on('active-bands', function( bands ){
+            console.clear();
+            console.table(bands);
         });
 
 
